Add, Refact, Fix (ALL) -> Various change see desc
Forgot to commit earlier

Utils:
- added pattern scan
- fixed get_virtual

Hooks:
- fixed original address saving
- added endscene hook

Misc:
- renamed print to pront to avoid confusion with builtin v print
- cleaned up prints , beeps, etc

- Build
- changed v compiler setting (-cg to -g) to get v line in bebuger

Errors:
- Added new errors

--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 # golphook
  Cool golp in your game :)
+ 
+0xffffffff8876086c
+// 8B 0D ? ? ? ? 53 57 + 2 | **(u32**)(*(u32*))
+// A3 ? ? ? ? 8D 47 30 + 1 | *(u32*)
+// A1 ? ? ? ? 50 8B 08 FF 51 0C + 1 |
+// 68 ? ? ? ? 8b cf 8a d8 + 1 | *(u32**)&V -> devie | **(u32**)&V ->vtable
+// prob3 := base_addr + 0x000a5050
